# moj-terraform-github-periodic-sync

./: .gitignore  .terraform.lock.hcl  README.md  build.sh  main.tf  outputs.tf  variables.tf  versions.tf
.github/workflows/: code-scanning.yml  documentation.yml  scorecards.yml  terraform-static-analysis.yml  test.yml
docs/: architecture-v2.md
function/: README.md  pyproject.toml  requirements.txt
function/scim_sync/: __init__.py  apply.py  config.py  dry_run.py  models.py  pipeline.py
function/scim_sync/adapters/: __init__.py  aws_errors.py  cloudwatch.py  cursor_store.py  github_auth.py  github_client.py  identity_store.py  metrics.py  watermark_store.py
function/scim_sync/handlers/: __init__.py  poller.py
function/scim_sync/logic/: __init__.py  audit_events.py  diff.py  plan.py  watermark.py
function/tests/fixtures/audit_log/: sample.json
function/tests/unit/: test_apply.py  test_audit_events.py  test_cloudwatch.py  test_config.py  test_cursor_store.py  test_diff.py  test_github_auth.py  test_pipeline.py  test_plan.py  test_watermark.py
test/: go.mod  go.sum
